# malg

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: documentation.yml  main.yml  ubuntu.yml  windows.yml
examples/: CMakeLists.txt  fixed_vs_variable.cpp  pendulum.cpp  sim_rlc_ct.cpp  sim_rlc_dt.cpp  test_control_2.cpp
include/malg/: complex_math.hpp  eigen.hpp  feq.hpp  io.hpp  linalg.hpp  math.hpp  matrix.hpp  matrix_array.hpp  matrix_base.hpp  type_traits.hpp  utility.hpp  vector.hpp  version.hpp  view.hpp
include/malg/control/: control.hpp
include/malg/control/solver/: it_algebra.hpp  less_with_sign.hpp  observer.hpp  rotating_buffer.hpp  solver.hpp  stepper_adaptive_euler.hpp  stepper_adaptive_rk4.hpp  stepper_euler.hpp  stepper_rk4.hpp
include/malg/fixed_size/: io.hpp  math.hpp  matrix.hpp  vector.hpp  view.hpp
include/malg/support/: stopwatch.hpp
test/: CMakeLists.txt  test_c2d.cpp  test_complex.cpp  test_control.cpp  test_control_1.cpp  test_control_2.cpp  test_control_3.cpp  test_generic.cpp  test_linalg.cpp  test_math.cpp  test_read_write_file.cpp  test_rlc.cpp  test_view.cpp
tests/: CMakeLists.txt  test_complex.cpp  test_control.cpp  test_find.cpp  test_fixed_size.cpp  test_linalg.cpp  test_math.cpp  test_memory.cpp  test_read_write_file.cpp  test_utility.cpp  test_view.cpp
